--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,6 @@ version: ${project.version}
 main: red.man10.man10moneytracer.Man10MoneyTracer
 authors: [Sho0]
 softdepend: [Man10MySQLAPI,Man10ATM]
+commands:
+ msearch:
+ mtp:
